* Report on any combination of business reporting units (up to one per class)


Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.34
* Fixed some SQL syntax issues on using overpayments (Chris T)
* Fixed date range when clicking through income statement to gl (Chris T, 836)

Changelog for 1.3.33
* Fixed <?lsmb YYMMMDD ?> interpolation in settings (Chris T)
* Fixed Contact field on search screen not doing anything (Chris T, 808)
* Fixed Department dropdown ordering and selection (Chris T, 810)
* Fixed Project dropdown ordering and selection (Chris T, 809)
* Fixed UI inconsistency re: language dropdown (Chris T, 816)
* Fixed grants to menus (which can cause problems for submenus (Chris T, 820)
* Fixed tax boxes cannot be all unset (Chris T, 818)
* Project, serial number, and notes now appear initially (Chris T, 824)
* Fixed double-counting first date's balance on gl report (Chris T)
* Fixed user creation failing on some timezones with some datestyles (Chris T)
* Added secondary partnumber ordering to eca history report (Chris T)
* Fixed default_reportable not respected for invoices (Chris T, 799)
* Fixed dropdowns not affecting date range in tax reports (Chris T, 811)
* Added missing taxincluded handling, added script to populate (Chris T, 832)
* Fixed code references stringified on LaTeX templates (Chris T, 843)
* Orders no longer change customer when changing date (Chris T)
* Fixed toggling on-hold vendor invoices (Herman V)
* Fixed disappearing addresses on update on invoice screen (Chris T)

Herman V is Herman Vierendeels
Chris T is Chris Travers

Changelog for 1.3.32
* Fixed em-dash handling for pdfs (Chris T)
* Fixed multiple blank line handling for pdfs (Chris T)
* Fixed multiple repeat entries in chart of accounts drop down (Nick P, 812)
* Fixed transaction list empty if searched by creditor name (Nick P, 806)
* Fixed cash transfer enforces ticked 'FX' boxes (Nick P, 802)